--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 0x08-recursion/0-puts_recursion
 0x08-recursion/1-print_rev_recursion
 0x08-recursion/2-strlen_recursion
+0x08-recursion/3-factorial
