Add 3-function_like.c file

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 0x08-recursion/7-palindrome
 0x08-recursion/100-wildcmp
 0x0B-malloc_free/a
+0x0D-preprocessor/3-main-c
+0x0D-preprocessor/d
+0x0D-preprocessor/3-main.c
