Updating Task 0 and Lib.h

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 0x0D-preprocessor/3-main-c
 0x0D-preprocessor/d
 0x0D-preprocessor/3-main.c
+0x0F-function_pointers/a
+0x0F-function_pointers/0-main.c
