--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 0x0D-preprocessor/3-main.c
 0x0F-function_pointers/a
 0x0F-function_pointers/0-main.c
+0x0F-function_pointers/b
+0x0F-function_pointers/1-main.c
