--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 0x0F-function_pointers/0-main.c
 0x0F-function_pointers/b
 0x0F-function_pointers/1-main.c
+0x0F-function_pointers/2-main.c
+0x0F-function_pointers/c
