--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 0x0F-function_pointers/calc
 0x0F-function_pointers/main
 0x10-variadic_functions/0-main.c
+0x10-variadic_functions/b
+0x10-variadic_functions/1-main.c
