--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@
 0x10-variadic_functions/0-main.c
 0x10-variadic_functions/b
 0x10-variadic_functions/1-main.c
+0x10-variadic_functions/.vscode/launch.json
+0x10-variadic_functions/c
+0x10-variadic_functions/2-main.c
+3-main.c
