--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@
 0x10-variadic_functions/c
 0x10-variadic_functions/2-main.c
 3-main.c
+0x12-singly_linked_lists/a.dSYM/Contents/Resources/DWARF/a
+0x12-singly_linked_lists/a.dSYM/Contents/Info.plist
+0x12-singly_linked_lists/a
+0x12-singly_linked_lists/0-main.c
+0x12-singly_linked_lists/1-main.c
+0x12-singly_linked_lists/b
