--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 0x12-singly_linked_lists/0-main.c
 0x12-singly_linked_lists/1-main.c
 0x12-singly_linked_lists/b
+0x12-singly_linked_lists/2-main.c
+0x12-singly_linked_lists/c
