--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,21 @@
 0x12-singly_linked_lists/b
 0x12-singly_linked_lists/2-main.c
 0x12-singly_linked_lists/c
+0x13-more_singly_linked_lists/10-main.c
+0x13-more_singly_linked_lists/9-main.c
+0x13-more_singly_linked_lists/8-main.c
+0x13-more_singly_linked_lists/7-main.c
+0x13-more_singly_linked_lists/6-main.c
+0x13-more_singly_linked_lists/5-main.c
+0x13-more_singly_linked_lists/4-main.c
+0x13-more_singly_linked_lists/2-main.c
+0x13-more_singly_linked_lists/1-main.c
+0x13-more_singly_linked_lists/0-main.c
+0x13-more_singly_linked_lists/c
+0x13-more_singly_linked_lists/b
+0x13-more_singly_linked_lists/a
+0x13-more_singly_linked_lists/g
+0x13-more_singly_linked_lists/h
+0x13-more_singly_linked_lists/i
+0x13-more_singly_linked_lists/j
+0x13-more_singly_linked_lists/k
