--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@
 0x13-more_singly_linked_lists/i
 0x13-more_singly_linked_lists/j
 0x13-more_singly_linked_lists/k
+0x15-file_io/Requiescat
+0x15-file_io/hello
+0x15-file_io/c
+0x15-file_io/b
+0x15-file_io/a
+0x15-file_io/2-main.c
+0x15-file_io/1-main.c
+0x15-file_io/0-main.c
