--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@
 0x1A-hash_tables/0-main.c
 0x1A-hash_tables/a
 0x1A-hash_tables/*main.c
+0x1C-makefiles/main.c
+0x1C-makefiles/m.h
+0x1C-makefiles/holberton.c
+0x1C-makefiles/holberton
