--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@
 0x1C-makefiles/holberton
 0x1C-makefiles/main.o
 0x1C-makefiles/holberton.o
+0x1C-makefiles/5-main.py
+0x1C-makefiles/__pycache__/5-island_perimeter.cpython-37.pyc
