--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@
 0x1C-makefiles/holberton.o
 0x1C-makefiles/5-main.py
 0x1C-makefiles/__pycache__/5-island_perimeter.cpython-37.pyc
+0x1E-search_algorithms/*main.c
